# docs/swagger.yaml
@@ -10,6 +10,63 @@ paths:
             type: string
       tags:
       - 首页
+  /user/createrUser:
+    get:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      - description: 确认密码
+        in: query
+        name: repassword
+        type: string
+      responses:
+        "200":
+          description: code", "message"}
+          schema:
+            type: string
+      summary: 注册用户
+      tags:
+      - 用户模块
+  /user/deleteUser:
+    get:
+      parameters:
+      - description: 用户id
+        in: query
+        name: id
+        type: string
+      responses:
+        "200":
+          description: code", "message"}
+          schema:
+            type: string
+      summary: 删除用户
+      tags:
+      - 用户模块
+  /user/findUserByNameAndPassword:
+    post:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      responses:
+        "200":
+          description: code", "message"}
+          schema:
+            type: string
+      summary: 获取用户列表
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       responses:
@@ -17,6 +74,38 @@ paths:
           description: code", "message"}
           schema:
             type: string
+      summary: 获取用户列表
       tags:
-      - 获取用户列表
+      - 用户模块
+  /user/updateUser:
+    post:
+      parameters:
+      - description: 用户id
+        in: formData
+        name: id
+        type: string
+      - description: name
+        in: formData
+        name: name
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        type: string
+      - description: email
+        in: formData
+        name: email
+        type: string
+      responses:
+        "200":
+          description: code", "message"}
+          schema:
+            type: string
+      summary: 更新用户
+      tags:
+      - 用户模块
 swagger: "2.0"
